added test cases for screen navigation and api call

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,5 +77,10 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    androidTestImplementation('com.schibsted.spain:barista:3.7.0') {
+        exclude group: 'org.jetbrains.kotlin' // Only if you already use Kotlin in your project
+    }
+    androidTestImplementation "com.squareup.okhttp3:mockwebserver:3.10.0"
+
 
 }
